# projection-software-converter

./: .gitignore  031526.reverse.json  BUILD_LINUX.md  BUILD_MACOS.md  BUILD_WINDOWS.md  EASYWORSHIP_FORENSICS_REPORT.md  INSTALLER.md  MAC_LINUX_PHASE1_REPORT.md  MAC_LINUX_PORT_PROMPT.md  README.md  RELEASE.md  projection-software-converter.spec  pyproject.toml
.github/workflows/: cross-platform-build.yml  windows-release.yml
installer/: ProjectionSoftwareConverter.iss
scripts/: generate_icon.py  write_version_info.py
src/projection_software_converter/: __main__.py  app.py  cli.py  config.py  updater.py
src/projection_software_converter/conversion/: __init__.py  base.py  bootstrap.py  easyworship_freeshow.py  easyworship_inspector.py  registry.py  service.py  videosalm_freeshow.py
src/projection_software_converter/gui/: main_window.py  upload_dialog.py
src/projection_software_converter/resources/: __init__.py  conversions.json
src/projection_software_converter/resources/easyworship_templates/: single_image_valid.bundle.json  single_image_valid.main.db  single_video_valid.bundle.json  single_video_valid.main.db
src/videosalm_to_freeshow/: README.md  __init__.py  __main__.py  cli.py
tests/: test_easyworship_tools.py  test_updater.py
